--- a/wildlife_tracking_backend/requirements.txt
+++ b/wildlife_tracking_backend/requirements.txt
@@ -18,10 +18,12 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
+motor==3.6.0
 packaging==24.2
 pluggy==1.5.0
 pycodestyle==2.13.0
 pydantic==2.11.3
+pydantic-settings==2.7.1
 pydantic_core==2.33.1
 pyflakes==3.3.2
 Pygments==2.19.1
