--- a/wildlife_tracking_backend/.env.example
+++ b/wildlife_tracking_backend/.env.example
@@ -1,8 +1,9 @@
-# MongoDB connection configuration for wildlife tracking backend
+# MongoDB configuration (required)
+# Example for local MongoDB:
+# MONGODB_URI=mongodb://localhost:27017
+# Example for MongoDB Atlas (SRV):
+# MONGODB_URI=mongodb+srv://<user>:<pass>@<cluster-url>/?retryWrites=true&w=majority
+MONGODB_URI=
 
-# PUBLIC: MongoDB connection string (SRV or standard). Example:
-# mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=majority
-MONGODB_URI=mongodb://localhost:27017
-
-# PUBLIC: Database name to use
+# Logical database name to use
 MONGODB_DB_NAME=wildlife_tracking
